apps/impostor/base/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: impostor
  labels:
    app: impostor
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: impostor
  template:
    metadata:
      labels:
        app: impostor
    spec:
      containers:
        - name: impostor
          image: ghcr.io/npastorale/impostor:latest@sha256:283ec71455926e42b0ccb7ae927e04f6c7c69a24e640a12c044364d23513fb57
          resources:
            requests:
              memory: "56Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1"
          imagePullPolicy: Always
          ports:
            - containerPort: 80
