apps/impostor/base/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: impostor
spec:
  type: ClusterIP
  selector:
    app: impostor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
